tests/machine/x/ocaml/string_in_operator.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/string_in_operator.ml", line 21, characters 41-42:
21 |   print_endline (__show ((List.mem "cat" s)));
                                              ^
Error: This expression has type string but an expression was expected of type
         string list


Context (around line 21):
  19 | 
  20 | let () =
  21 |   print_endline (__show ((List.mem "cat" s)));
  22 |   print_endline (__show ((List.mem "dog" s)));
  23 | 
